frontend/test/should_pass/edge_model_007.gm
abstract undirected edge class A;
undirected edge class B extends A;
abstract undirected edge class C extends B;
undirected edge class D extends C;
