frontend/test/should_fail/edge_model_004.gm
edge class A extends Edge;
abstract edge class AA extends A;

undirected edge class B;
abstract undirected edge class BB extends B;

edge class C extends AA,BB;
